third_party/move/move-compiler-v2/tests/more-v1/expansion/restricted_module_alias_names.move
module 0x42::M {
    // not allowed
    use 0x42::M as Self;
    // now allowed
    use 0x42::M as vector;
}
